--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,27 +9,24 @@
 @import "tailwindcss/utilities";
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap");
 
-@font-face {
-  font-family: "Atkinson";
-  src: url("/fonts/atkinson-regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Atkinson";
-  src: url("/fonts/atkinson-bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
+* {
+  box-sizing: border-box;
 }
 
 :root {
   background-color: black;
 }
 
+@font-face {
+  font-family: "Manrope, sans-serif";
+  src: url("/fonts/atkinson-bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
-  font-family: "Atkinson", sans-serif;
+  font-family: "Manrope", sans-serif;
   margin: 0;
   padding: 0;
   text-align: left;
@@ -39,20 +36,29 @@ body {
   overflow-wrap: break-word;
   color: white;
 }
+
 main {
-  max-width: 1440px;
   margin: auto;
   background-color: black;
 }
 
-.global-padding {
-  padding: 0 5%;
+.padding-global {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.container {
+  margin: auto;
+}
+
+.container-large {
+  max-width: 1200px;
 }
 
 /* text and header stylings */
 h1 {
   font-family: "Manrope", sans-serif;
-  font-size: 3.5rem;
+  font-size: 3.3rem;
   line-height: 3.8rem;
 }
 h2 {
@@ -60,17 +66,13 @@ h2 {
   line-height: 3rem;
 }
 h3 {
-  font-size: 2rem;
-  line-height: 2.5rem;
-}
-p {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
+  line-height: 1.75rem;
+  text-transform: uppercase;
 }
 
-h1,
-h2,
-h3 {
-  margin-bottom: 1rem;
+p {
+  font-size: 1rem;
 }
 
 /* screen reader */
