--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,14 +2,19 @@
 import Button from "./Button.astro";
 ---
 
-<div class="grid grid-cols-3 gap-6 w-full py-12" id="header-content">
+<div class="grid grid-cols-3 gap-6 w-full py-12 pb-24" id="header-content">
   <div class="col-span-2 md:pr-12 flex flex-col gap-7" id="header-text">
     <h1>
       Hi! I'm Thomas. <br /> I bring websites & digital applications to life.
     </h1>
-    <p>
+    <!-- <p>
       With a holistic skillset of engineering, user behavior, and product
       strategy, I turn thoughts into tangible realities.
+    </p> -->
+    <p>
+      With over a decade of experience in digital product development, I create
+      seamless experiences that let users achieve their goals without friction,
+      leading to higher customer satisfaction and increased sales.
     </p>
     <div class="flex flex-wrap gap-4">
       <Button text="Get in Touch" type="primary" />
