--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,16 +40,20 @@ const optimizedBackground = await getImage({
       <div class="container container-large">
         <div class="padding-global py-24">
           <div>
-            <h2 class="text-center mb-8">
-              Code makes things work, <br /> empathy makes them feel right.
-            </h2>
-            <p class="text-center text-xl">
+            <h2 class="text-center mb-8">My Skills</h2>
+            <!-- <p class="text-center text-xl">
               With over a <strong>decade</strong> of experience in digital product
-              development, I create seamless digital experiences that let users achieve
-              their goals without friction, leading to higher customer satisfaction
-              and increased sales.
+              development, I create seamless experiences that let users achieve their
+              goals without friction, leading to higher customer satisfaction and
+              increased sales.
+            </p> -->
+            <p class="text-center">
+              With a holistic skillset of engineering, user behavior, and
+              product strategy, <strong
+                >I turn thoughts into tangible realities.</strong
+              >
             </p>
-            <div class="mt-24"></div>
+            <div class="mt-12"></div>
             <!-- 3 Boxes -->
             <div>
               <div
@@ -60,15 +64,37 @@ const optimizedBackground = await getImage({
                   text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
                 />
                 <Card
-                  header="User-Experience Design"
+                  header="User Experience Design"
                   text="With an extensive background in UX copywriting, design, and research, I create seamless customer journeys and highly-intuitive interfaces that foster lasting user engagement and loyalty."
                 />
                 <Card
                   header="Data-Driven Optimization"
-                  text="I utilize data and optimization tools like Google Analytics, Tag Manager, CrazyEgg, Optimizely, and Python/Pandas to make analytics-based improvements to improve KPI's and drive conversions."
+                  text="I utilize data and optimization tools like Google Analytics, Optimizely, and Python/Pandas to make analytics-based improvements to boost KPI's and increase conversion rates."
                 />
               </div>
             </div>
+
+            <!--
+              V-SHAPED LAYOUT
+              <div>
+              <div class="flex flex-wrap items-center justify-center gap-12">
+                <Card
+                  header="Front-End Development"
+                  text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
+                  className="w-full md:w-2/5"
+                />
+                <Card
+                  header="User-Experience Design"
+                  text="With an extensive background in UX copywriting, design, and research, I create seamless customer journeys and highly-intuitive interfaces that foster lasting user engagement and loyalty."
+                  className="w-full md:w-2/5"
+                />
+                <Card
+                  header="Data-Driven Optimization"
+                  text="I utilize data and optimization tools like Google Analytics, Optimizely, and Python/Pandas to make analytics-based improvements to improve KPI's and drive conversions."
+                  className="w-full md:w-2/5"
+                />
+              </div>
+            </div> -->
           </div>
         </div>
       </div>
