--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -66,7 +66,7 @@ h2 {
   line-height: 3rem;
 }
 h3 {
-  font-size: 1.1rem;
+  font-size: 1.4rem;
   line-height: 1.75rem;
   text-transform: uppercase;
 }
