--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,22 +1,38 @@
 ---
 import H3 from "../components/H3.astro";
+import { Image } from "astro:assets";
 
 export interface Props {
   header: string;
   text: string;
-  className?: string;
+  icon: any;
+  classes?: string;
 }
 
-const { header, text, className } = Astro.props as Props;
+const { header, text, classes, icon } = Astro.props as Props;
+
+console.log("icon", icon);
 ---
 
 <!-- Card HTML structure -->
-<div class={`card px-4 pb-6 flex flex-col items-center ${className ?? ""} `}>
-  <div class="max-w-36 flex items-center w-full">
-    <img src="src/images/icons/icon.png" alt="Thomas" class="rounded-xl" />
+<div class=`md:w-6/12 lg:w-1/3 py-6 ${
+  classes ?? ""
+}`>
+  <div
+    class={`card px-4 py-5 pb-8 flex flex-col items-center w-full h-full   `}
+  >
+    <div class="max-w-36 flex items-center w-full mb-4">
+      <Image
+        src={icon}
+        alt="icon"
+        class="rounded-xl"
+        width="300"
+        height="250"
+      />
+    </div>
+    <H3 centered="True" header={header} />
+    <p class="text-center">{text}</p>
   </div>
-  <H3 centered="True" header={header} />
-  <p class="text-center">{text}</p>
 </div>
 
 <style>
