--- a/src/components/H3.astro
+++ b/src/components/H3.astro
@@ -13,7 +13,7 @@ const center = centered ? "text-center" : "";
     <div>&lt;</div>
   </div>
   <div class="max-w-[14rem] px-2">
-    <h3 class=`${center} font-semibold`>{header}</h3>
+    <h3 class=`${center}`>{header}</h3>
   </div>
   <div class="text-purple text-2xl mt-[-2px] flex flex-col justify-center">
     <div>&gt;</div>
