--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,12 @@ import BaseHead from "../components/BaseHead.astro";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
 import Hero from "../components/Hero.astro";
-import Card from "../components/Card.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
 // Import the getImage function and the image you want to optimize
 import { getImage } from "astro:assets";
 import gradientBackground from "../images/backgrounds/gradient-1600.png";
+import Skills from "../components/Skills.astro";
 
 // Use getImage() to optimize the image
 const optimizedBackground = await getImage({
@@ -36,68 +36,8 @@ const optimizedBackground = await getImage({
         </div>
       </div>
 
-      <!-- 3 Boxes Section -->
-      <div class="container container-large">
-        <div class="padding-global py-24">
-          <div>
-            <h2 class="text-center mb-8">My Skills</h2>
-            <!-- <p class="text-center text-xl">
-              With over a <strong>decade</strong> of experience in digital product
-              development, I create seamless experiences that let users achieve their
-              goals without friction, leading to higher customer satisfaction and
-              increased sales.
-            </p> -->
-            <p class="text-center">
-              With a holistic skillset of engineering, user behavior, and
-              product strategy, <strong
-                >I turn thoughts into tangible realities.</strong
-              >
-            </p>
-            <div class="mt-12"></div>
-            <!-- 3 Boxes -->
-            <div>
-              <div
-                class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12"
-              >
-                <Card
-                  header="Front-End Development"
-                  text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
-                />
-                <Card
-                  header="User Experience Design"
-                  text="With an extensive background in UX copywriting, design, and research, I create seamless customer journeys and highly-intuitive interfaces that foster lasting user engagement and loyalty."
-                />
-                <Card
-                  header="Data-Driven Optimization"
-                  text="I utilize data and optimization tools like Google Analytics, Optimizely, and Python/Pandas to make analytics-based improvements to boost KPI's and increase conversion rates."
-                />
-              </div>
-            </div>
+      <Skills />
 
-            <!--
-              V-SHAPED LAYOUT
-              <div>
-              <div class="flex flex-wrap items-center justify-center gap-12">
-                <Card
-                  header="Front-End Development"
-                  text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
-                  className="w-full md:w-2/5"
-                />
-                <Card
-                  header="User-Experience Design"
-                  text="With an extensive background in UX copywriting, design, and research, I create seamless customer journeys and highly-intuitive interfaces that foster lasting user engagement and loyalty."
-                  className="w-full md:w-2/5"
-                />
-                <Card
-                  header="Data-Driven Optimization"
-                  text="I utilize data and optimization tools like Google Analytics, Optimizely, and Python/Pandas to make analytics-based improvements to improve KPI's and drive conversions."
-                  className="w-full md:w-2/5"
-                />
-              </div>
-            </div> -->
-          </div>
-        </div>
-      </div>
       <Footer />
 
       <style>
