--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@200;300;400;500;600&display=swap");
 
 * {
   box-sizing: border-box;
@@ -66,6 +67,8 @@ h2 {
   line-height: 3rem;
 }
 h3 {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 400;
   font-size: 1.4rem;
   line-height: 1.75rem;
   text-transform: uppercase;
