--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,7 +53,7 @@ main {
 }
 
 .container-large {
-  max-width: 1200px;
+  max-width: 1400px;
 }
 
 /* text and header stylings */
@@ -74,8 +74,17 @@ h3 {
   text-transform: uppercase;
 }
 
+h5 {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  text-transform: uppercase;
+}
+
 p {
-  font-size: 1rem;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
 }
 
 /* screen reader */
