--- a/src/components/H3.astro
+++ b/src/components/H3.astro
@@ -8,7 +8,7 @@ const { centered, header } = Astro.props as {
 const center = centered ? "text-center" : "";
 ---
 
-<div class="mb-4 flex flex-row justify-center">
+<div class="flex flex-row">
   <div class="text-purple text-2xl mt-[-2px] flex flex-col justify-center">
     <div>&lt;</div>
   </div>
