--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,47 +5,48 @@ import dataIcon from "../images/icons/data-icon.png";
 import designIcon from "../images/icons/design-icon.png";
 ---
 
-<div class="container container-large">
-  <div class="padding-global py-36">
-    <div>
-      <h2 class="text-center mb-8">My Skills</h2>
-      <!-- <p class="text-center text-xl">
+<section>
+  <div class="container container-large">
+    <div class="padding-global py-36">
+      <div>
+        <h2 class="text-center mb-8">My Skills</h2>
+        <!-- <p class="text-center text-xl">
         With over a <strong>decade</strong> of experience in digital product
         development, I create seamless experiences that let users achieve their
         goals without friction, leading to higher customer satisfaction and
         increased sales.
       </p> -->
-      <p class="text-center">
-        With a holistic skillset of engineering, user behavior, and product
-        strategy, <strong>I turn thoughts into tangible realities.</strong>
-      </p>
-      <div class="mt-4"></div>
-      <!-- 3 Boxes -->
-      <div>
-        <!-- <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12"> -->
-        <div class="flex flex-row justify-center flex-wrap">
-          <Card
-            header="Front-End Development"
-            text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
-            icon={codeIcon}
-            classes="pr-6"
-          />
-          <Card
-            header="User-Experience Design"
-            text="Using my extensive background in  copywriting, UI design, and user research, I create highly-intuitive interfaces and seamless customer journeys that foster lasting user engagement and loyalty."
-            icon={designIcon}
-            classes="px-3"
-          />
-          <Card
-            header="Data-Driven Optimization"
-            text="I utilize data and optimization tools like Google Analytics, Optimizely, and Python/Pandas to make analytics-based improvements to boost KPI's and increase conversion rates."
-            icon={dataIcon}
-            classes="pl-6"
-          />
+        <p class="text-center">
+          With a holistic skillset of engineering, user behavior, and product
+          strategy, <strong>I turn thoughts into tangible realities.</strong>
+        </p>
+        <div class="mt-4"></div>
+        <!-- 3 Boxes -->
+        <div>
+          <!-- <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12"> -->
+          <div class="flex flex-row justify-center flex-wrap padding-extra">
+            <Card
+              header="Front-End Development"
+              text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
+              icon={codeIcon}
+              classes="pr-6"
+            />
+            <Card
+              header="User-Experience Design"
+              text="Using my extensive background in  copywriting, UI design, and user research, I create highly-intuitive interfaces and seamless customer journeys that foster lasting user engagement and loyalty."
+              icon={designIcon}
+              classes="px-3"
+            />
+            <Card
+              header="Data-Driven Optimization"
+              text="I utilize data and optimization tools like Google Analytics, Optimizely, and Python/Pandas to make analytics-based improvements to boost KPI's and increase conversion rates."
+              icon={dataIcon}
+              classes="pl-6"
+            />
+          </div>
         </div>
-      </div>
 
-      <!--
+        <!--
         V-SHAPED LAYOUT
         <div>
         <div class="flex flex-wrap items-center justify-center gap-12">
@@ -66,6 +67,7 @@ import designIcon from "../images/icons/design-icon.png";
           />
         </div>
       </div> -->
+      </div>
     </div>
   </div>
-</div>
+</section>
