--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -13,12 +13,10 @@ const { header, text, classes, icon } = Astro.props as Props;
 ---
 
 <!-- Card HTML structure -->
-<div class=`md:w-6/12 lg:w-1/3 py-6 ${
+<div class=`md:w-1/2 lg:w-1/3 py-6 ${
   classes ?? ""
 }`>
-  <div
-    class={`card px-4 py-5 pb-8 flex flex-col items-center w-full h-full   `}
-  >
+  <div class="card px-4 py-5 pb-8 flex flex-col items-center w-full h-full">
     <div class="max-w-36 flex items-center w-full mb-4">
       <Image
         src={icon}
@@ -28,8 +26,8 @@ const { header, text, classes, icon } = Astro.props as Props;
         height="250"
       />
     </div>
-    <H3 centered="True" header={header} />
-    <p class="text-center">{text}</p>
+    <div class="mb-4"><H3 centered="True" header={header} /></div>
+    <span class="text-center">{text}</span>
   </div>
 </div>
 
