--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import { getImage } from "astro:assets";
 import gradientBackground from "../images/backgrounds/gradient-1600.png";
 import Skills from "../components/Skills.astro";
 import Philosophy from "../components/Philosophy.astro";
+import Portfolio from "../components/Portfolio.astro";
 
 // Use getImage() to optimize the image
 const optimizedBackground = await getImage({
@@ -43,6 +44,8 @@ const optimizedBackground = await getImage({
       <Philosophy />
 
       <Experience />
+
+      <Portfolio />
 
       <Footer />
     </main>
