--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,6 +47,10 @@ main {
   padding-left: 5%;
   padding-right: 5%;
 }
+.padding-extra {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
 
 .container {
   margin: auto;
@@ -85,6 +89,10 @@ h5 {
 p {
   font-size: 1.2rem;
   margin-bottom: 1rem;
+}
+
+span {
+  font-size: 1.2rem;
 }
 
 /* screen reader */
