--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -26,7 +26,7 @@ const { header, text, classes, icon } = Astro.props as Props;
         height="250"
       />
     </div>
-    <div class="mb-4"><H3 centered="True" header={header} /></div>
+    <div class="mb-4"><H3 centered="True" header={header} maxWidth="14" /></div>
     <span class="text-center">{text}</span>
   </div>
 </div>
