--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,7 +24,7 @@ import Button from "./Button.astro";
     </p>
     <div class="flex flex-wrap gap-4">
       <Button text="Get in Touch" type="primary" />
-      <Button text="See My Work" type="transparent" />
+      <Button text="See My Work" type="secondary" />
     </div>
     <div class="text-sm uppercase underline flex flex-wrap gap-5">
       <div>Full-Stack Development</div>
