--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -7,8 +7,8 @@ import Button from "../components/Button.astro";
     <div class="container container-large">
       <div class="padding-global">
         <div class="grid grid-cols-5">
-          <div class="col-span-2 bg-blue-300">col 1</div>
-          <div class="col-span-3 bg-purple py-16 px-8">
+          <div class="col-span-5 lg:col-span-2 bg-blue-300">col 1</div>
+          <div class="col-span-5 lg:col-span-3 bg-purple py-16 px-8">
             <!-- content -->
             <div class="flex flex-col gap-4">
               <h5>My Philosophy</h5>
