added portfolio section

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -34,9 +34,9 @@ const { header, text, classes, icon } = Astro.props as Props;
 <style>
   .card {
     position: relative;
-    background-image: url("src/images/backgrounds/gradient-600.png");
+    background-image: url("src/images/backgrounds/gradient-1.png");
     background-size: cover;
-    background-position: center;
+    background-position: bottom left;
     background-repeat: no-repeat;
     border-radius: 15px;
     z-index: 1;
