--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,14 +23,14 @@ import Button from "./Button.astro";
       friction, leading to higher customer satisfaction and increased sales.
     </p>
     <div class="flex flex-wrap gap-4">
-      <Button text="Get in Touch" type="primary" />
-      <Button text="See My Work" type="secondary" />
+      <Button text="Get in Touch" type="primary" link="/" />
+      <Button text="See My Work" type="secondary" link="/" />
     </div>
     <div class="text-sm uppercase underline flex flex-wrap gap-5">
-      <div>Full-Stack Development</div>
-      <div>UX/UI</div>
-      <div>Product Strategy</div>
-      <div>Data Analysis</div>
+      <h6>Full-Stack Development</h6>
+      <h6>UX/UI</h6>
+      <h6>Product Strategy</h6>
+      <h6>Data Analysis</h6>
     </div>
   </div>
   <div class="col-span-1 order-first md:order-last" id="header-image">
