--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -94,6 +94,14 @@ h5 {
   text-transform: uppercase;
 }
 
+h6 {
+  font-weight: 400;
+  font-size: 0.85rem;
+  text-transform: uppercase;
+  text-decoration: underline;
+  letter-spacing: 1px;
+}
+
 p {
   font-size: 1rem;
   margin-bottom: 1rem;
