--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -13,7 +13,7 @@ const { header, text, classes, icon } = Astro.props as Props;
 ---
 
 <!-- Card HTML structure -->
-<div class=`md:w-1/2 lg:w-1/3 py-6 ${
+<div class=`py-6 ${
   classes ?? ""
 }`>
   <div class="card px-4 py-5 pb-8 flex flex-col items-center w-full h-full">
