--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,24 +1,32 @@
 ---
-import type { HTMLAttributes } from 'astro/types';
+import type { HTMLAttributes } from "astro/types";
 
-type Props = HTMLAttributes<'a'>;
+type Props = HTMLAttributes<"a">;
 
 const { href, class: className, ...props } = Astro.props;
 
 const { pathname } = Astro.url;
-const isActive = href === pathname || href === pathname.replace(/\/$/, '');
+const isActive = href === pathname || href === pathname.replace(/\/$/, "");
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
-	<slot />
-</a>
+<div class="rounded-xl flex items-center justify-center">
+  <a
+    href={href}
+    class:list={[className, { active: isActive }]}
+    {...props}
+    class="rounded-2xl flex items-center justify-center"
+  >
+    <slot />
+  </a>
+</div>
+
 <style>
-	a {
-		display: inline-block;
-		text-decoration: none;
-	}
-	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
-	}
+  a {
+    display: inline-block;
+    text-decoration: none;
+  }
+  a.active {
+    font-weight: bolder;
+    background-color: #4b4bfa;
+  }
 </style>
