--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -39,7 +39,7 @@ import designIcon from "../images/icons/design-icon.png";
             />
             <Card
               header="Data-Driven Optimization"
-              text="I make analytics-based improvements that boost KPIs by effectively utilizing tools like Google Analytics, Optimizely, and a variety of Python data and visualization libraries."
+              text="I make analytics-based improvements that boost KPIs and increase conversions by effectively utilizing tools like Google Analytics, Optimizely, and a variety of Python data and visualization libraries."
               icon={dataIcon}
               classes="pl-6 md:w-1/2 lg:w-1/3 "
             />
