fixed up footer and testimonials

--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -3,7 +3,7 @@ import { Swiper, SwiperSlide } from "swiper/react";
 import "swiper/css";
 import Carousel from "./Carousel.jsx";
 import Card from "./Card.astro";
-import designIcon from "../images/icons/design-icon.png";
+import georgiaPettit from "../images/people/georgia-pettit.png";
 ---
 
 <section>
@@ -18,16 +18,18 @@ import designIcon from "../images/icons/design-icon.png";
           <div class="flex flex-col lg:flex-row justify-center gap-0 lg:gap-12">
             <!-- <Carousel client:load /> -->
             <Card
-              header="Front-End Development"
-              text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
-              icon={designIcon}
+              header="John Smith, CEO @ Fake Company"
+              text="Tom's data-driven approach to website optimization was a game-changer for our online business. His ability to translate analytics into actionable insights led to a remarkable increase in our conversion rates. His expertise in user engagement strategies has been invaluable to our team."
+              icon={georgiaPettit}
               classes="w-full lg:w-1/2"
+              rounded={true}
             />
             <Card
-              header="Front-End Development"
-              text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
-              icon={designIcon}
+              header="John Smith, CEO @ Fake Company"
+              text="Tom's data-driven approach to website optimization was a game-changer for our online business. His ability to translate analytics into actionable insights led to a remarkable increase in our conversion rates. His expertise in user engagement strategies has been invaluable to our team."
+              icon={georgiaPettit}
               classes="w-full lg:w-1/2"
+              rounded={true}
             />
           </div>
         </div>
