--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -7,9 +7,14 @@ export interface Props {
   text: string;
   icon: any;
   classes?: string;
+  rounded?: boolean;
 }
 
-const { header, text, classes, icon } = Astro.props as Props;
+const { header, text, classes, icon, rounded } = Astro.props as Props;
+
+const imageRounded = rounded ? "rounded-full" : "rounded-xl";
+
+console.log("image rounded: ", imageRounded);
 ---
 
 <!-- Card HTML structure -->
@@ -17,14 +22,10 @@ const { header, text, classes, icon } = Astro.props as Props;
   classes ?? ""
 }`>
   <div class="card px-4 py-5 pb-8 flex flex-col items-center w-full h-full">
-    <div class="max-w-36 flex items-center w-full mb-4">
-      <Image
-        src={icon}
-        alt="icon"
-        class="rounded-xl"
-        width="300"
-        height="250"
-      />
+    <div
+      class=`max-w-36 flex items-center w-full mb-4 ${imageRounded} overflow-hidden`
+    >
+      <Image src={icon} alt="icon" width="300" height="250" />
     </div>
     <div class="mb-4"><H3 centered="True" header={header} maxWidth="14" /></div>
     <span class="text-center">{text}</span>
@@ -32,6 +33,8 @@ const { header, text, classes, icon } = Astro.props as Props;
 </div>
 
 <style>
+  .image {
+  }
   .card {
     position: relative;
     background-image: url("src/images/backgrounds/gradient-1.png");
